--- a/v3/README
+++ b/v3/README
@@ -2,8 +2,10 @@ v3
 
 Engine:
 
-- Rube Goldberg machines build items hierarchically based on manual input. However, if manual input stops, system will stall. Until perpetual motion is attained.
-
+- Rube Goldberg machines build items hierarchically based on manual input. However, if manual input stops, system will stall... until perpetual motion is attained.
+- build items one at a time. 
+- checking the 'build' checkbox will decay items into the next item (eg, bits into parts). 
+- higher item count has the benefit of longer 
 
 Perpetual Motion
 
